--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -416,19 +416,25 @@ ICMP6_OBJS +=	icmp6ddi.o
 
 RTS_OBJS +=	rtsddi.o rts.o rts_opt_data.o
 
-IP_OBJS +=	igmp.o ip.o ip6.o ip6_asp.o ip6_if.o ip6_ire.o ip6_rts.o \
-		ip_cksum.o ip_if.o ip_ire.o ip_listutils.o ip_mroute.o \
-		ip_multi.o ip_ndp.o ip_opt_data.o ip_rts.o ip_srcid.o \
-		ipddi.o ipdrop.o mi.o nd.o optcom.o snmpcom.o ipsec_loader.o \
-		spd.o ipclassifier.o inet_common.o ip_squeue.o tcp.o \
-		tcp_trace.o tcp_opt_data.o tcp_sack.o squeue.o ip_sadb.o \
-		sctp_crc32.o sctp.o sctp_opt_data.o sctp_output.o \
+IP_TCP_OBJS =	tcp.o tcp_trace.o tcp_opt_data.o tcp_sack.o tcp_fusion.o
+IP_UDP_OBJS =	udp.o udp_opt_data.o
+IP_SCTP_OBJS =	sctp_crc32.o sctp.o sctp_opt_data.o sctp_output.o \
 		sctp_init.o sctp_input.o sctp_cookie.o \
 		sctp_conn.o sctp_error.o sctp_snmp.o \
 		sctp_param.o sctp_shutdown.o sctp_common.o \
 		sctp_timer.o sctp_heartbeat.o sctp_hash.o \
 		sctp_ioc.o sctp_bind.o sctp_notify.o sctp_asconf.o \
 		sctp_addr.o
+
+IP_OBJS +=	igmp.o ip.o ip6.o ip6_asp.o ip6_if.o ip6_ire.o ip6_rts.o \
+		ip_cksum.o ip_if.o ip_ire.o ip_listutils.o ip_mroute.o \
+		ip_multi.o ip_ndp.o ip_opt_data.o ip_rts.o ip_srcid.o \
+		ipddi.o ipdrop.o mi.o nd.o optcom.o snmpcom.o ipsec_loader.o \
+		spd.o ipclassifier.o inet_common.o ip_squeue.o squeue.o \
+		ip_sadb.o \
+		$(IP_TCP_OBJS) \
+		$(IP_UDP_OBJS) \
+		$(IP_SCTP_OBJS)
 
 IP6_OBJS +=	ip6ddi.o
 
@@ -467,7 +473,7 @@ ATUN_OBJS +=	atun.o
 
 6TO4TUN_OBJS +=	6to4tun.o
 
-UDP_OBJS +=	udpddi.o udp.o udp_opt_data.o
+UDP_OBJS +=	udpddi.o
 
 UDP6_OBJS +=	udp6ddi.o
 
