--- a/usr/src/uts/sparc/Makefile.sparc
+++ b/usr/src/uts/sparc/Makefile.sparc
@@ -237,6 +237,7 @@ DRV_KMODS	+= vni
 #       Hardware Drivers in common space
 #
 DRV_KMODS       += ixgb
+DRV_KMODS	+= rge
 
 #
 #	Machine Specific Driver Modules (/kernel/drv):
