6299501 sun4v cscope/tags include sun4u, still references to sun4u in sun4v directory

--- a/usr/src/uts/sun4u/Makefile.sun4u
+++ b/usr/src/uts/sun4u/Makefile.sun4u
@@ -223,7 +223,7 @@ LINT_DEFS	= -Xarch=v9
 #	PLATFORM_OFFSETS:	Platform specific mach_offsets.in
 #	FDOFFSETS:		fd_offsets.in
 #
-MAPFILE		 = $(UTSBASE)/$(PLATFORM)/conf/Mapfile
+MAPFILE		 = $(UTSBASE)/sun4/conf/Mapfile
 MODSTUBS	 = $(UTSBASE)/sparc/ml/modstubs.s
 GENCONST_SRC	 = $(UTSBASE)/sun4/ml/genconst.c
 OFFSETS		 = $(UTSBASE)/sun4/ml/offsets.in
