6300267 Remove objmgr module

--- a/usr/src/uts/intel/dadk/Makefile
+++ b/usr/src/uts/intel/dadk/Makefile
@@ -22,7 +22,7 @@
 #
 # uts/intel/dadk/Makefile
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #pragma ident	"%Z%%M%	%I%	%E% SMI"
@@ -64,6 +64,7 @@ INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOT_ITUFILE)
 #
 DEBUG_FLGS	=
 DEBUG_DEFS	+= $(DEBUG_FLGS)
+LDFLAGS		+= -dy -Nmisc/gda
 
 #
 #	Default build targets.
