4855218 sparc: Need EFI label support on IDE 6275431 x86: Need EFI label support on IDE 6340778 cmlb: common disk label code 6326547 format: converting EFI to VTOC, fdisk info is taken from a random disk 6335611 format: Need to warn users that data will be lost when converting to and from EFI labels

--- a/usr/src/cmd/format/Makefile
+++ b/usr/src/cmd/format/Makefile
@@ -56,7 +56,7 @@ $(ROOTETCDATA) := FILEMODE = 0644
 $(ROOTETCDATA) := OWNER = root
 $(ROOTETCDATA) := GROUP = sys
 
-LDLIBS +=	-ladm -lefi -ldiskmgt -lnvpair
+LDLIBS +=	-ladm -lefi -ldiskmgt -lnvpair -ldevid
 
 .KEEP_STATE:
 
