--- a/usr/src/uts/intel/Makefile.intel
+++ b/usr/src/uts/intel/Makefile.intel
@@ -438,6 +438,7 @@ SYS_KMODS	+= acctctl
 MISC_KMODS	+= amsrc1 amsrc2
 MISC_KMODS	+= audiosup
 MISC_KMODS	+= busra
+MISC_KMODS	+= cmlb
 MISC_KMODS	+= consconfig
 MISC_KMODS	+= ctf
 MISC_KMODS	+= dadk
@@ -473,7 +474,6 @@ MISC_KMODS	+= rpcsec
 MISC_KMODS	+= rpcsec_gss
 MISC_KMODS	+= rsmops
 MISC_KMODS	+= scsi
-MISC_KMODS	+= snlb
 MISC_KMODS	+= strategy
 MISC_KMODS	+= strplumb
 MISC_KMODS	+= sysinit
