--- a/usr/src/uts/sparc/Makefile.sparc
+++ b/usr/src/uts/sparc/Makefile.sparc
@@ -341,6 +341,7 @@ MISC_KMODS	+= ibtl
 MISC_KMODS	+= ctf 
 MISC_KMODS	+= zmod
 MISC_KMODS	+= mac dls
+MISC_KMODS	+= cmlb
 
 #
 #	Software Cryptographic Providers (/kernel/crypto):
