--- a/usr/src/uts/sun/Makefile.files
+++ b/usr/src/uts/sun/Makefile.files
@@ -81,6 +81,8 @@ SBUSMEM_OBJS +=	sbusmem.o
 
 SD_OBJS +=	sd.o sd_xbuf.o
 
+CMLB_OBJS +=	cmlb.o
+
 DAD_OBJS +=	dad.o
 
 DADA_OBJS +=	dcd_hba.o       dcd_transport.o \
