6232309 need configurable limit on number of open FMEs

--- a/usr/src/cmd/fm/modules/common/eversholt/eft.conf
+++ b/usr/src/cmd/fm/modules/common/eversholt/eft.conf
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -58,6 +58,11 @@
 #
 #		Turns on EFT file language warnings.  Useful only
 #		in very obscure debugging cases.
+#
+#	setprop maxfme <integer>
+#
+#		Sets the maximum number of open fault management exercises.
+#		The value "0" (zero) specifies no limit.
 #
 dictionary SUNOS
 setprop autoclose upsets
