6340481 Keyboard & mouse do not work on PS/2-port-equipped SPARC systems 6341170 8042 drivers should support suspend/resume 6341171 i8042 should allow itself to be unloaded 6341176 i8042 should realize when it's talking to a wall 6341179 i8042 should workaround SPARC hardware with PS/2 keyboard/mouse interrupt issues 6341229 vuidps2 doesn't recognize when a simple mouse device doesn't respond to the first wheel mouse cmd 6343601 i8042 updates the wrong device type property

--- a/usr/src/uts/common/sys/Makefile
+++ b/usr/src/uts/common/sys/Makefile
@@ -51,6 +51,7 @@ i386_HDRS=			\
 	fd_debug.h		\
 	fdc.h			\
 	fdmedia.h		\
+	mouse.h			\
 	mse.h			\
 	vuidmice.h
 
@@ -60,6 +61,7 @@ AVHDRS=				\
 sparc_HDRS= 			\
 	audio/audiots.h		\
 	audio/am_src2.h		\
+	mouse.h			\
 	scsi/targets/ssddef.h	\
 	$(MDESCHDRS)		\
 	$(AVHDRS)
@@ -316,6 +318,7 @@ CHKHDRS=			\
 	modhash.h		\
 	modhash_impl.h		\
 	mount.h			\
+	mouse.h			\
 	msacct.h		\
 	msg.h			\
 	msg_impl.h		\
