--- a/usr/src/uts/sparc/os/dacf.conf
+++ b/usr/src/uts/sparc/os/dacf.conf
@@ -40,7 +40,6 @@ driver-minorname="hid:internal_keyboard" consconfig_dacf:kb_config post-attach -
 driver-minorname="hid:internal_keyboard" consconfig_dacf:kb_config pre-detach - pushmod="usbkbm"
 driver-minorname="zs:keyboard" consconfig_dacf:kb_config post-attach - pushmod="kb"
 driver-minorname="su:keyboard" consconfig_dacf:kb_config post-attach - pushmod="kb"
-driver-minorname="kb_ps2:keyboard" consconfig_dacf:kb_config post-attach - pushmod="kbsm_ps2"
 driver-minorname="su_pnp:keyboard" consconfig_dacf:kb_config post-attach - pushmod="kb"
 
 #
@@ -52,7 +51,8 @@ driver-minorname="hid:internal_mouse" consconfig_dacf:ms_config post-attach - pu
 driver-minorname="hid:internal_mouse" consconfig_dacf:ms_config pre-detach - pushmod="usbms"
 driver-minorname="zs:mouse" consconfig_dacf:ms_config post-attach - pushmod="ms"
 driver-minorname="su:mouse" consconfig_dacf:ms_config post-attach - pushmod="ms"
-driver-minorname="kdmouse:mouse" consconfig_dacf:ms_config post-attach - pushmod="vuidps2"
+driver-minorname="mouse8042:internal_mouse" consconfig_dacf:ms_config post-attach - pushmod="vuid3ps2"
+driver-minorname="mouse8042:internal_mouse" consconfig_dacf:ms_config pre-detach - pushmod="vuid3ps2"
 driver-minorname="su_pnp:mouse" consconfig_dacf:ms_config post-attach - pushmod="ms"
 
 #
@@ -66,3 +66,10 @@ driver-minorname="ttymux:con" ttymux_dacf:ttymux_config post-attach -
 #
 driver-minorname="usb_ac:mux" usb_ac_dacf:usb_audio_config post-attach -
 driver-minorname="usb_ac:mux" usb_ac_dacf:usb_audio_config pre-detach -
+
+#
+# Devices directly supporting the keyboard API need no device-specific module,
+# but do need to be linked to the console stream.
+#
+minor-nodetype="ddi_keyboard" consconfig_dacf:kb_config post-attach -
+minor-nodetype="ddi_keyboard" consconfig_dacf:kb_config pre-detach -
