PSARC 2005/375 PCI Hotplug Extensions for PCIe PSARC 2002/315 cPCI Autoconfiguration Support 6331880 PCI Hot-Plug Framework Extension for PCIe 6331883 cPCI autoconfiguration support 6326583 PCIE support for X86 6339777 cleanup of references to obsoleted interface, pcihp_cb_ops, in pci/pci_pci nexus (x86) 6341189 assertion panic on Dell PowerEdge 6850 in apic.c: apic_irq_table[irqno]->airq_intin_no != ipin

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -685,6 +685,8 @@ HPCSVC_OBJS += hpcsvc.o
 
 PCIHPNEXUS_OBJS += pcihp.o
 
+PCIEHPCNEXUS_OBJS += pciehpc.o
+
 PCICFG_OBJS += pcicfg.o
 
 OPENEEPR_OBJS += openprom.o
