PSARC 2004/626 SNIA Multipath Management API support for scsi_vhci PSARC 2005/646 MDI/PHCI/libdevinfo Extensions for SNIA MPAPI support 6271075 Provide libdevinfo interface that allows to get to phci nodes from vhci 6274924 DINFOCACHE snapshot needs to be invalidated when pathinfo is created or removed 6326490 Need to provide interconnect-type prop 6326499 MDI needs to provide vhci/phci/client device traversal interfaces. 6326502 MDI needs to generate sysevent for phci registration/unregistration 6326564 Provide SNIA MP API support 6326937 scsi_vhci(MPxIO) needs to provide Explicit Mode support for TPGS devices

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -1176,6 +1176,7 @@ SCSI_VHCI_OBJS +=	scsi_vhci.o		\
 			lsi_asymmetric_fops.o	\
 			std_asymmetric_fops.o	\
 			emc_asymmetric_fops.o	\
+			mpapi_impl.o		\
 			proprietary_vhci_util.o
 
 STRPLUMB_OBJS += strplumb.o octet.o
