--- a/usr/src/uts/intel/Makefile.intel
+++ b/usr/src/uts/intel/Makefile.intel
@@ -249,6 +249,7 @@ DRV_KMODS	+= llc2
 DRV_KMODS	+= lofi
 DRV_KMODS	+= log
 DRV_KMODS	+= logindmux
+DRV_KMODS	+= kssl
 DRV_KMODS	+= mm
 DRV_KMODS	+= mouse8042
 DRV_KMODS	+= mpt
