--- a/usr/src/uts/sparc/Makefile.sparc
+++ b/usr/src/uts/sparc/Makefile.sparc
@@ -223,7 +223,7 @@ DRV_KMODS	+= dtrace fasttrap fbt lockstat profile sdt systrace
 DRV_KMODS	+= fssnap glm icmp icmp6 ip ip6 ipsecah
 DRV_KMODS	+= ipsecesp isp iwscn keysock kmdb kstat ksyms llc1 llc2
 DRV_KMODS	+= lofi
-DRV_KMODS	+= log logindmux mm mpt nca pm poll pool
+DRV_KMODS	+= log logindmux kssl mm mpt nca pm poll pool
 DRV_KMODS	+= pseudo ptc ptm pts ptsl ramdisk random rsm rts sad se 
 DRV_KMODS	+= spdsock sppp sppptun sy sysevent sysmsg 
 DRV_KMODS	+= tcp tcp6 tl tnf ttymux udp udp6 vol wc winlock zcons
