--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -417,7 +417,8 @@ ICMP6_OBJS +=	icmp6ddi.o
 
 RTS_OBJS +=	rtsddi.o rts.o rts_opt_data.o
 
-IP_TCP_OBJS =	tcp.o tcp_trace.o tcp_opt_data.o tcp_sack.o tcp_fusion.o
+IP_TCP_OBJS =	tcp.o tcp_fusion.o tcp_kssl.o tcp_opt_data.o tcp_sack.o \
+		tcp_trace.o
 IP_UDP_OBJS =	udp.o udp_opt_data.o
 IP_SCTP_OBJS =	sctp_crc32.o sctp.o sctp_opt_data.o sctp_output.o \
 		sctp_init.o sctp_input.o sctp_cookie.o \
@@ -805,8 +806,9 @@ SPEC_OBJS +=	specsubr.o	specvfsops.o	specvnops.o
 
 SOCK_OBJS +=	socksubr.o	sockvfsops.o	sockvnops.o	\
 		socksyscalls.o	socktpi.o	sockstr.o	ncafs.o \
-		socksctp.o	socksctpsubr.o	socksctpvnops.o	nl7c.o \
-		nl7curi.o	nl7chttp.o	nl7clogd.o	nl7cnca.o
+		socksctp.o	socksctpsubr.o	socksctpvnops.o	sockssl.o \
+		nl7c.o		nl7curi.o	nl7chttp.o	nl7clogd.o \
+		nl7cnca.o
 
 TMPFS_OBJS +=	tmp_dir.o	tmp_subr.o	tmp_tnode.o	tmp_vfsops.o \
 		tmp_vnops.o
@@ -1038,6 +1040,11 @@ COMMON_RSAPROV_OBJS += rsa.o bignumimpl.o rsa_impl.o
 RSAPROV_OBJS += $(COMMON_RSAPROV_OBJS) $(RSAPROV_PSR_OBJS)
 
 SWRANDPROV_OBJS += swrand.o
+
+#
+#			kernel SSL
+#
+KSSL_OBJS +=	kssl.o ksslioctl.o ksslapi.o ksslrec.o
 
 #
 #			misc. modules
