--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -588,6 +588,8 @@ USBSER_EDGE_OBJS += usbser_edge.o edge_dsd.o edge_dsd_sp.o edge_dsd_ti.o \
 
 USBSER_KEYSPAN_OBJS += usbser_keyspan.o keyspan_dsd.o keyspan_pipe.o
 
+USBSPRL_OBJS += usbser_pl2303.o pl2303_dsd.o
+
 WC_OBJS += wscons.o
 
 SCSI_OBJS +=	scsi_capabilities.o	scsi_control.o	scsi_watch.o \
