--- a/usr/src/uts/sparc/Makefile.sparc
+++ b/usr/src/uts/sparc/Makefile.sparc
@@ -249,7 +249,7 @@ DRV_KMODS	+= ssd socal
 DRV_KMODS	+= ecpp
 DRV_KMODS	+= uata dad ifp
 DRV_KMODS	+= hid hubd ehci ohci uhci usb_mid scsa2usb usbprn ugen
-DRV_KMODS	+= usbser usbser_edge usbsksp
+DRV_KMODS	+= usbser usbser_edge usbsksp usbsprl
 DRV_KMODS	+= usb_as usb_ac
 DRV_KMODS	+= usbskel
 DRV_KMODS	+= hci1394 av1394 scsa1394 dcam1394
