--- a/usr/src/uts/sparc/warlock/Makefile
+++ b/usr/src/uts/sparc/warlock/Makefile
@@ -85,6 +85,7 @@ warlock.usb:
 	@cd ../usbser; rm -f *.ll *.ok; $(MAKE) warlock
 	@cd ../usbser_edge; rm -f *.ll *.ok; $(MAKE) warlock
 	@cd ../usbsksp; rm -f *.ll *.ok; $(MAKE) warlock
+	@cd ../usbsprl; rm -f *.ll *.ok; $(MAKE) warlock
 	@cd ../usbskel; rm -f *.ll *.ok; $(MAKE) warlock
 
 warlock.scsi:
