PSARC 2005/576 Support for complex cryptographic mechanisms PSARC 2005/630 session, object, and key management kernel crypto API PSARC 2005/656 AES CTR mode for KCF PSARC 2005/659 Hiding members of KCF logical providers 4721729 Support AES Counter mode for encryption 6243992 dprov stores attributes based on data model of application 6203141 Sessions and objects management kernel crypto API 6253484 Support mechanisms with complex mech_param structures across the EF stack 6314217 Hide underlying providers of logical providers

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -1023,9 +1023,10 @@ LMODT_OBJS +=	lmodt.o
 #			kernel cryptographic framework
 #
 KCF_OBJS +=	kcf.o kcf_callprov.o kcf_cbufcall.o kcf_cipher.o kcf_crypto.o \
-		kcf_cryptoadm.o kcf_ctxops.o kcf_digest.o kcf_dual.o kcf_mac.o \
-		kcf_mech_tabs.o kcf_miscapi.o kcf_policy.o kcf_prov_tabs.o \
-		kcf_sched.o kcf_sign.o kcf_spi.o kcf_verify.o kcf_random.o
+		kcf_cryptoadm.o kcf_ctxops.o kcf_digest.o kcf_dual.o \
+		kcf_keys.o kcf_mac.o kcf_mech_tabs.o kcf_miscapi.o \
+		kcf_object.o kcf_policy.o kcf_prov_tabs.o kcf_sched.o \
+		kcf_session.o kcf_sign.o kcf_spi.o kcf_verify.o kcf_random.o
 
 CRYPTOADM_OBJS += cryptoadm.o
 
