--- a/usr/src/cmd/cmd-crypto/etc/kcf.conf
+++ b/usr/src/cmd/cmd-crypto/etc/kcf.conf
@@ -42,7 +42,7 @@
 #	
 # Start SUNWcsr
 des:supportedlist=CKM_DES_CBC,CKM_DES_ECB,CKM_DES3_CBC,CKM_DES3_ECB
-aes:supportedlist=CKM_AES_ECB,CKM_AES_CBC
+aes:supportedlist=CKM_AES_ECB,CKM_AES_CBC,CKM_AES_CTR
 arcfour:supportedlist=CKM_RC4
 blowfish:supportedlist=CKM_BLOWFISH_ECB,CKM_BLOWFISH_CBC
 sha1:supportedlist=CKM_SHA_1,CKM_SHA_1_HMAC_GENERAL,CKM_SHA_1_HMAC
