PSARC 2005/477 Broadcom 582[0125] support for dca crypto driver 6316121 Add DCA crypto driver to Solaris

--- a/usr/src/cmd/fm/eversholt/files/sparc/Makefile
+++ b/usr/src/cmd/fm/eversholt/files/sparc/Makefile
@@ -26,7 +26,7 @@
 #ident	"%Z%%M%	%I%	%E% SMI"
 
 SUBDIRS=sun4u sun4v SUNW,Sun-Fire-15000
-EFT_COMMON_FILES= pci.eft
+EFT_COMMON_FILES= pci.eft sca500.eft sca1000.eft
 
 include ../../../Makefile.subdirs
 
