--- a/usr/src/uts/common/crypto/io/dca.conf
+++ b/usr/src/uts/common/crypto/io/dca.conf
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,12 +18,13 @@
 #
 # CDDL HEADER END
 #
+
 #
 # Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
+
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
-
-EFT_COMMON_FILES= pci.eft sca500.eft sca1000.eft
-
-include ../Makefile.com
+#pragma ident	"%Z%%M%	%I%	%E% SMI"
+#
+#
+ddi-forceattach=1; 
