6342314 some px #defines conflict with pci #defines 6342319 Need a sparc mdb dcmd to display pci/px interrupt registrations 6343599 Need an x86 mdb dcmd to display interrupt registrations 6344455 px_nexus.h is not needed

--- a/usr/src/cmd/mdb/i86pc/modules/Makefile
+++ b/usr/src/cmd/mdb/i86pc/modules/Makefile
@@ -20,10 +20,10 @@
 # CDDL HEADER END
 #
 #
-# Copyright (c) 1999 by Sun Microsystems, Inc.
-# All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
-SUBDIRS = unix
+SUBDIRS = unix pcplusmp
 include ../../Makefile.subdirs
