--- a/usr/src/uts/sun/Makefile.files
+++ b/usr/src/uts/sun/Makefile.files
@@ -48,6 +48,7 @@ GENUNIX_OBJS +=								\
 #			Driver Modules
 #
 AUDIOCS_OBJS +=	audio_4231.o audio_4231_apcdma.o audio_4231_eb2dma.o
+AUDIO1575_OBJS += audio1575.o
 
 BPP_OBJS +=	bpp.o
 
