PSARC/2005/584 PSM_INTR_OPS extensions 6272601 x86 interrupts should export kstats which include time accounting 6284254 PCItool needs x86 interrupt routing support 6340286 ddi interrupt framework needs to better accomodate platform specific data 6346377 x86 pci_detach calls ddi_soft_state_free with minor instead of instance 6346409 move x86 pci driver state struct from pci_var.h to pci_common.h 6349488 pcitool -i -r coredumps when output is rerouted to a file 6349492 Add feature for pcitool -b to show inaccessible bytes but keep going

--- a/usr/src/uts/intel/pcmcia/Makefile
+++ b/usr/src/uts/intel/pcmcia/Makefile
@@ -64,6 +64,11 @@ $(MODSTUBS_O)	:= AS_CPPFLAGS += -DPCMCIA_MODULE
 CLEANFILES	+= $(MODSTUBS_O)
 
 #
+#	Include i86pc specific header files
+#
+INC_PATH        += -I$(UTSBASE)/i86pc
+
+#
 #	dependency
 #
 LDFLAGS	+=	-dy -Nmisc/busra -Nmisc/pci_autoconfig
