4908967 toxic page handling on shutdown takes disproportionate amount of time 6330830 Aggressive page retire v3

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -51,6 +51,7 @@ COMMON_CORE_OBJS +=		\
 		lgrp_topo.o	\
 		mutex.o		\
 		page_lock.o	\
+		page_retire.o	\
 		panic.o		\
 		param.o		\
 		putnext.o	\
