4644326 scsa2usb goes into a loop while processing STALL condition 6261946 usbser_edge: NULL pointer dereference panic in edge_pipe_start_polling 6308155 comments confusing in scsa2usb.conf 6316748 panic: assertion failed: rval == DDI_SUCCESS, file: common/io/usb/hcd/openhci/ohci.c (1998) 6328230 logitech mx900 mouse does not enumerate on uhci 6338046 Sun Type 6 Japanese keyboard and other Japanese keyboards should be recognized 6347166 free(char *) is not correct in cfga_configfile.c

--- a/usr/src/cmd/loadkeys/type_6/Makefile
+++ b/usr/src/cmd/loadkeys/type_6/Makefile
@@ -49,7 +49,7 @@ LAYOUTS= \
         layout_0f layout_10 layout_12 layout_13 layout_16 layout_19 \
         layout_1a layout_1b layout_1c layout_1e layout_20 layout_21 \
         layout_100 layout_18 layout_101 layout_102 layout_103 layout_104 \
-        layout_105 layout_106 layout_107 layout_108
+        layout_105 layout_106 layout_107 layout_108 layout_10f
 
 ROOTLINKS= $(LAYOUTS:%=$(ROOTKEYDIR)/%)
 
@@ -157,6 +157,9 @@ $(ROOTKEYDIR)/layout_107: $(ROOTKEYDIR)/maltauk
 	$(RM) $@; $(LN) $(ROOTKEYDIR)/maltauk  $@
 
 $(ROOTKEYDIR)/layout_108: $(ROOTKEYDIR)/albania
-	$(RM) $@; $(LN) $(ROOTKEYDIR)/albania  $@ 
+	$(RM) $@; $(LN) $(ROOTKEYDIR)/albania  $@
+
+$(ROOTKEYDIR)/layout_10f: $(ROOTKEYDIR)/japan
+	$(RM) $@; $(LN) $(ROOTKEYDIR)/japan $@ 
 
 include ../../Makefile.targ
