--- a/usr/src/uts/common/io/usb/scsa2usb/scsa2usb.conf
+++ b/usr/src/uts/common/io/usb/scsa2usb/scsa2usb.conf
@@ -86,14 +86,32 @@
 #		If this is the case, the device should have power
 #		management disabled by setting this to "off".
 # 
-#	remvalue - "false" if the device's hardware "removable"
-#		status is not to be ignored. This is the only legal
-#		value for this parameter. Normally all USB devices
-#		are considered removable devices, which allows them
-#		to be mounted by the Volume Management daemon.
-#		For some USB hard drives it may be desirable not to
-#		ignore their hardware removable status.
-# 
+#	remvalue - "false" if the device's removable media information
+#		in its hardware inquiry data is not to be ignored. This
+#		is the only legal value for this parameter. There is a
+#		removable media status bit in the USB storage device's
+#		inquiry data to indicate if the device has a media that
+#		can be removed. Usually only devices like floppy drives
+#		or CD/DVD drives that really have a removable media can
+#		have this bit set and be called removable media devices.
+#		Solaris treats removable media devices and non-
+#		removable media devices differently. Refer to "System
+#		Administration Guide: Devices and File Systems" -
+#		"Using USB Devices (Tasks)" - "Using USB Mass Storage
+#		Devices" section for the differences in system behavior
+#		of treating removable media devices and non-removable
+#		media devices.
+#
+#		By default, Solaris will treat all USB storage devices
+#		as removable media devices irrespective of the removable
+#		media bit value. The advantage is a consistent user
+#		experience. In some cases this may be undesirable and
+#		the removable media bit value should not be ignored. By
+#		setting "remvalue" to "false", the information provided
+#		by the device is preserved. Consequently a USB hard disk
+#		is treated as a real hard disk and will show in
+#		format(1M) disk list and no longer in rmformat(1M) list.
+#
 #	modesensevalue - "false" if the device cannot handle mode sense
 #		requests. This is the only legal value for this
 #		parameter. Some devices choke on mode sense requests
